<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BlackBox</string>
    <string name="choose">Choose</string>
    <string name="choose_app">Choose App</string>
    <string name="installed_app">Installed App</string>
    <string name="installed_module">Installed Module</string>
    <string name="empty_empty">Empty</string>
    <string name="filter">Filter</string>
    <string name="open_source_path">Open Source</string>
    <string name="xp_setting">Xposed Setting</string>
    <string name="tg_group">Telegram Group</string>
    <string name="fake_location">Fake Location</string>
    <string name="real_location">Real Location</string>
    <string name="set_location">Set Fake Location Successfully:%s-%s</string>
    <string name="close_fake_location">Disable FakeLocation</string>
    <string name="close_app_fake_location">Disable FakeLocation for %s</string>
    <string name="close_fake_location_success">Disable FakeLocation for %s Successfully</string>
    <string name="setting">Setting</string>
    <string name="jump_module">Go to Module Manager</string>
    <string name="module_setting">Module Manager</string>
    <string name="enable_xposed">Enable Xposed Framework</string>
    <string name="hider">Hide</string>
    <string name="hide_root">Hide Root</string>
    <string name="hide_xposed">Hide Xposed</string>
    <string name="userRemark">User Remark</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="permission_setting">Setting</string>
    <string name="no_reminders">No Reminders</string>
    <string name="app_stop">Stop Running</string>
    <string name="app_stop_hint">Do you want to stop %s forcibly?</string>
    <string name="is_stop">%s is Stopped</string>
    <string name="app_open">Open App</string>
    <string name="app_clear">Clear Data</string>
    <string name="app_clear_hint">Clear Data for %s?</string>
    <string name="app_remove">Uninstall App</string>
    <string name="app_shortcut">Create Shortcut</string>
    <string name="shortcut_name">Shortcut Name</string>
    <string name="try_add_shortcut">Try Added To Desktop</string>
    <string name="add_shortcut_fail_msg">If the addition fails, please go to system settings and open the permission of "create desktop shortcut" for BlackBox</string>
    <string name="install_success">Installed Successfully</string>
    <string name="install_fail">Installed Failed: %s</string>
    <string name="install_fail_no_msg">Installed Failed</string>
    <string name="uninstall_success">Uninstalled Successfully</string>
    <string name="uninstall_fail">Uninstalled Failed</string>
    <string name="uninstall_app">Uninstall App</string>
    <string name="uninstall_app_hint">Uninstall %s, and relevant data will be cleared after uninstallation?</string>
    <string name="uninstall_module">Uninstall Module</string>
    <string name="uninstall_module_hint">Do you want to uninstall this module? It will no longer work after uninstallation?</string>
    <string name="remove_success">Removed Successfully</string>
    <string name="clear_success">Cleared Successfully</string>
    <string name="start_fail">Launched Failed</string>
    <string name="start_in_outside">Start module in outside</string>
    <string name="restart_module">Restart app to apply change</string>
    <string name="cannot_create_shortcut">This desktop does not support creating shortcuts</string>
    <string name="uninstall_module_toast">Please uninstall the xposed module in the Module Manager</string>
    <string name="other">Others</string>
    <string name="daemon_enable">Daemon</string>
    <string name="gms_manager">GMS Manager</string>
    <string name="jump_gms">Go to Gms Manager</string>
    <string name="enable_gms">Enable Service</string>
    <string name="enable_gms_hint">Opening Google services can make youtube and other software that strongly rely on Google play services run normally.</string>
    <string name="disable_gms">Disable Service</string>
    <string name="disable_gms_hint">Clear the current Google service environment? Google service data will be cleared.</string>
    <string name="no_gms">Currently, there is no Google service environment on mobile phones.</string>
    
    <!-- Camera Manager -->
    <string name="Camera_setting">Virtual Camera Setting</string>
    <string name="app_desc">Protect Your Camera Privacy.</string>
    <string name="protect_method">Choose Protect Method</string>
    <string name="choise_video">Choose Local Video</string>
    <string name="protect_path_hint">Input video url</string>
    <string name="audio_enable">Audio Enable:</string>
    <string name="protect_method_disable_camera">1. Disable</string>
    <string name="protect_method_local">2. Use Local Video</string>
    <string name="protect_method_network">3. Use Network Video Stream</string>
    <string name="protect_tip_none">Tips: Please choose a protection method.</string>
    <string name="protect_tip_disable">Tips: This will disable the virtual camera.</string>
    <string name="protect_tip_local">Tips: This will replace the camera data with a local video.</string>
    <string name="protect_tip_network">Tips: This will replace the camera data with a network video.</string>
    
    
    <string name="save">Save</string>
    
    
    <string name="copy_obb_title">Import Game OBB</string>
    <string name="copy_obb_summary">Copy main/patch OBB files from Real Storage to Virtual Storage</string>
    <string name="copy_obb_start">Copying OBB files...</string>
    <string name="copy_obb_success">Copy Completed</string>
    <string name="obb_popup_title">Setup Big Games</string>
    <string name="obb_popup_message">To play big games, you need to import OBB files. Click Import to proceed.</string>
    <string name="obb_popup_import">Import</string>
    
</resources>