<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/xp_setting">
        
        <SwitchPreferenceCompat
            app:key="xp_enable"
            app:title="@string/enable_xposed" />

        <Preference
            android:dependency="xp_enable"
            app:key="xp_module"
            app:summary="@string/jump_module"
            app:title="@string/module_setting" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other">

        <Preference
            app:key="copy_obb"
            app:title="@string/copy_obb_title"
            app:summary="@string/copy_obb_summary"/>

        
        <Preference
            android:key="gms_manager"
            android:title="@string/gms_manager"
            android:summary="@string/jump_gms"/>

        <SwitchPreferenceCompat
            app:key="xp_hide"
            app:title="@string/hide_xposed" />

        <SwitchPreferenceCompat
            app:key="root_hide"
            app:title="@string/hide_root" />

        <SwitchPreferenceCompat
            app:key="daemon_enable"
            app:title="@string/daemon_enable" />
        
        <SwitchPreferenceCompat
            android:key="accessibility_service_enable"
            android:title="Accessibility Service"
            android:summary="Enable Accessibility service for video overlay"
            android:defaultValue="false" />
       
        
    </PreferenceCategory>
</PreferenceScreen>